# bot

./: .env.example  .gitignore  Dockerfile  bot.py  config.py  pyproject.toml
callbacks/: factory.py
dialogs/tasks/: base.py  create_task.py  update_task.py
entities/: categories.py  tasks.py  users.py
enums/: tasks.py
exceptions/: base.py  constants.py  tasks.py  users.py
handlers/: main.py  tasks.py
keyboards/: main.py  tasks.py
messages/: greeting.py  tasks.py
repositories/: categories.py  tasks.py  users.py
schemas/: categories.py  tasks.py  users.py
states/: tasks.py
utils/: tasks.py
